only replace pipes for Bro logs

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -20,7 +20,7 @@ rewrite r_cisco_program {
 };
 
 rewrite r_snare { subst("MSWinEventLog.+(Security|Application|System).+", "$1", value("PROGRAM") flags(global)); };
-rewrite r_from_pipes { subst('\|', "%7C", value("MESSAGE") flags(global)); };
+rewrite r_from_pipes { subst('\|', "%7C", value("MESSAGE") flags(global) condition(program("bro_*" type(glob)))); };
 rewrite r_pipes { subst("\t", "|", value("MESSAGE") flags(global)); };
 rewrite r_host { set("$SOURCEIP", value("HOST")); };
 rewrite r_extracted_host { set("$pdb_extracted_sourceip", value("HOST") condition("$pdb_extracted_sourceip" != "")); };
