securityonion-elsa-web.conf

--- a/contrib/securityonion-elsa-web.conf
+++ b/contrib/securityonion-elsa-web.conf
@@ -2,9 +2,9 @@
 	"apikeys": { "elsa": "1" },
     "version": {
         "Author": "mcholste",
-        "Date": "2013-12-04 12:00:00 -0400 (Wed, 04 Dec 2013)",
-        "Rev": "1090",
-        "Sphinx": "Sphinx 2.0.7-id64-dev (rel20-r373)"
+        "Date": "2014-07-17 15:12:58 -0700 (Thu, 17 Jul 2014)",
+        "Rev": "1205",
+        "Sphinx": "Sphinx 2.1.9"
     },
   	"peers": {
 		"127.0.0.1": {
@@ -133,6 +133,11 @@
 	"yui" : {
 		"local" : "inc"
 	},
+    "data_db" : {
+            "db" : "syslog",
+            "username" : "elsa",
+            "password" : "biglog"
+    },
     # This DB stores the query log, user permissions, etc. for the frontend.
     "meta_db" : {
             "dsn" : "dbi:mysql:database=elsa_web",
@@ -180,16 +185,6 @@
     # This is the offset for spacing of log ID numbers between peers.  You should not need to change this number (until one node his 1 trillion logs).
     "peer_id_multiplier" : 1000000000000,
     "query_timeout": 10,
-    # Backend node configuration
-    "nodes" : {
-            "127.0.0.1" : {
-            	"db": "syslog",
-            	"username": "elsa",
-            	"password": "biglog",
-	            "port": 3306,
-                "sphinx_port": 9306
-            }
-    },
     # URL for StreamDB
     "pcap_url": "http://streamdb",
     # URL for sending IP block requests
