--- a/contrib/securityonion-elsa-api.conf
+++ b/contrib/securityonion-elsa-api.conf
@@ -77,7 +77,59 @@
 					"state": "Somestate"
 				}
 			}
-		}
+		},
+        "parse":{
+            "tld":[
+                {
+                    "field":"domain",
+                    "pattern":"\\.([a-zA-Z]+)$",
+                    "extractions":[
+                        "tld"
+                    ]
+                },
+                {
+                    "field":"site",
+                    "pattern":"\\.([a-zA-Z]+)$",
+                    "extractions":[
+                        "tld"
+                    ]
+                },
+                {
+                    "field":"uri",
+                    "pattern":"\\.([a-zA-Z]+)(:|/|$)",
+                    "extractions":[
+                        "tld"
+                    ]
+                }
+            ],
+            "url":[
+                {
+                    "field":"uri",
+                    "pattern":"(?:(?<proto>[a-zA-Z]+)://)?(?:(?<username>[^/]+):(?<password>[^/]+)@)?(?<domain>\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}|[^/]+\\.(?<tld>[a-zA-Z]+))(?::(?<port>\\d+))?(?<resource>/[^?]*)?(?:\\?(?<query_string>.*))?$",
+                    "extractions":[
+                        "proto",
+                        "username",
+                        "password",
+                        "domain",
+                        "tld",
+                        "port",
+                        "resource",
+                        "query_string"
+                    ]
+                }
+            ],
+            "mimetype":[
+                {
+                    "field":"msg",
+                    "pattern":"[\"'\\(\\[\\s\\|;:](?<mime>(?<type>application|audio|chemical|image|message|model|multipart|text|video)/(?<subtype>[\\w-_]+))[\"'\\)\\]\\s\\|;:]",
+                    "extractions":[
+                        "mime",
+                        "type",
+                        "subtype"
+                    ]
+                }
+            ]
+        }
 		#"cif": {
 		# Use either server_ip and server_name or base_url
 		#	"base_url": "https://127.0.0.1",
@@ -127,6 +179,11 @@
 	"yui" : {
 		"local" : "inc"
 	},
+    "data_db" : {
+            	"db": "syslog",
+            	"username": "elsa",
+            	"password": "biglog"
+    },
     # This DB stores the query log, user permissions, etc. for the frontend.
     "meta_db" : {
             "dsn" : "dbi:mysql:database=elsa_web",
@@ -173,17 +230,7 @@
 	},
     # This is the offset for spacing of log ID numbers between peers.  You should not need to change this number (until one node his 1 trillion logs).
     "peer_id_multiplier" : 1000000000000,
-    "query_timeout": 10,
-    # Backend node configuration
-    "nodes" : {
-            "127.0.0.1" : {
-            	"db": "syslog",
-            	"username": "elsa",
-            	"password": "biglog",
-	            "port": 50000,
-                "sphinx_port": 9306
-            }
-    },
+    "query_timeout": 55,
     # URL for StreamDB
     "pcap_url": "http://streamdb",
     # URL for sending IP block requests
