securityonion-elsa-extras: add parser for Bro 2.4 mysql.log #755

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -52,6 +52,7 @@ source s_bro_intel { file("/nsm/bro/logs/current/intel.log" flags(no-parse) prog
 source s_bro_x509 { file("/nsm/bro/logs/current/x509.log" flags(no-parse) program_override("bro_x509")); };
 source s_bro_snmp { file("/nsm/bro/logs/current/snmp.log" flags(no-parse) program_override("bro_snmp")); };
 source s_bro_radius { file("/nsm/bro/logs/current/radius.log" flags(no-parse) program_override("bro_radius")); };
+source s_bro_mysql { file("/nsm/bro/logs/current/mysql.log" flags(no-parse) program_override("bro_mysql")); };
 
 destination d_elsa { program("perl /opt/elsa/node/elsa.pl -c /etc/elsa_node.conf" template(t_db_parsed)); };
 
@@ -76,6 +77,7 @@ log {
   	source(s_bro_x509); 
   	source(s_bro_snmp); 
   	source(s_bro_radius); 
+  	source(s_bro_mysql); 
 	source(s_ossec);
 	source(s_network);
 	source(s_syslog);
