securityonion-elsa-extras: add parser for Bro 2.4 rdp.log #757

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -54,6 +54,7 @@ source s_bro_snmp { file("/nsm/bro/logs/current/snmp.log" flags(no-parse) progra
 source s_bro_radius { file("/nsm/bro/logs/current/radius.log" flags(no-parse) program_override("bro_radius")); };
 source s_bro_mysql { file("/nsm/bro/logs/current/mysql.log" flags(no-parse) program_override("bro_mysql")); };
 source s_bro_kerberos { file("/nsm/bro/logs/current/kerberos.log" flags(no-parse) program_override("bro_kerberos")); };
+source s_bro_rdp { file("/nsm/bro/logs/current/rdp.log" flags(no-parse) program_override("bro_rdp")); };
 
 destination d_elsa { program("perl /opt/elsa/node/elsa.pl -c /etc/elsa_node.conf" template(t_db_parsed)); };
 
@@ -80,6 +81,7 @@ log {
   	source(s_bro_radius); 
   	source(s_bro_mysql); 
   	source(s_bro_kerberos); 
+  	source(s_bro_rdp); 
 	source(s_ossec);
 	source(s_network);
 	source(s_syslog);
