--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -55,6 +55,7 @@ source s_bro_radius { file("/nsm/bro/logs/current/radius.log" flags(no-parse) pr
 source s_bro_mysql { file("/nsm/bro/logs/current/mysql.log" flags(no-parse) program_override("bro_mysql")); };
 source s_bro_kerberos { file("/nsm/bro/logs/current/kerberos.log" flags(no-parse) program_override("bro_kerberos")); };
 source s_bro_rdp { file("/nsm/bro/logs/current/rdp.log" flags(no-parse) program_override("bro_rdp")); };
+source s_bro_pe { file("/nsm/bro/logs/current/pe.log" flags(no-parse) program_override("bro_pe")); };
 
 destination d_elsa { program("perl /opt/elsa/node/elsa.pl -c /etc/elsa_node.conf" template(t_db_parsed)); };
 
@@ -82,6 +83,7 @@ log {
   	source(s_bro_mysql); 
   	source(s_bro_kerberos); 
   	source(s_bro_rdp); 
+  	source(s_bro_pe); 
 	source(s_ossec);
 	source(s_network);
 	source(s_syslog);
