securityonion-elsa-extras: add parser for Bro 2.4 sip.log #759

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -56,6 +56,7 @@ source s_bro_mysql { file("/nsm/bro/logs/current/mysql.log" flags(no-parse) prog
 source s_bro_kerberos { file("/nsm/bro/logs/current/kerberos.log" flags(no-parse) program_override("bro_kerberos")); };
 source s_bro_rdp { file("/nsm/bro/logs/current/rdp.log" flags(no-parse) program_override("bro_rdp")); };
 source s_bro_pe { file("/nsm/bro/logs/current/pe.log" flags(no-parse) program_override("bro_pe")); };
+source s_bro_sip { file("/nsm/bro/logs/current/sip.log" flags(no-parse) program_override("bro_sip")); };
 
 destination d_elsa { program("perl /opt/elsa/node/elsa.pl -c /etc/elsa_node.conf" template(t_db_parsed)); };
 
@@ -84,6 +85,7 @@ log {
   	source(s_bro_kerberos); 
   	source(s_bro_rdp); 
   	source(s_bro_pe); 
+  	source(s_bro_sip); 
 	source(s_ossec);
 	source(s_network);
 	source(s_syslog);
