add 'Require all granted' to apache elsa.conf

--- a/contrib/securityonion_apache_site.conf
+++ b/contrib/securityonion_apache_site.conf
@@ -13,6 +13,7 @@ NameVirtualHost localhost:3154
 	DocumentRoot /opt/elsa/web/lib
 	SetEnv ELSA_CONF /etc/elsa_web.conf
 	<Location "/">
+		Require all granted
 		Order Allow,Deny
 		Allow from all
 		SetHandler perl-script
