fix interface from syslog-ng to elsa.pl

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -58,7 +58,7 @@ source s_bro_rdp { file("/nsm/bro/logs/current/rdp.log" flags(no-parse) program_
 source s_bro_pe { file("/nsm/bro/logs/current/pe.log" flags(no-parse) program_override("bro_pe")); };
 source s_bro_sip { file("/nsm/bro/logs/current/sip.log" flags(no-parse) program_override("bro_sip")); };
 
-destination d_elsa { program("perl /opt/elsa/node/elsa.pl -c /etc/elsa_node.conf" template(t_db_parsed)); };
+destination d_elsa { program("sh /opt/elsa/contrib/securityonion/contrib/securityonion-elsa-syslog-ng.sh" template(t_db_parsed)); };
 
 log { 
 	source(s_bro_conn);
