configure Apache to proxy /elsa-query/ to port 3154

--- a/contrib/securityonion-elsa-web.conf
+++ b/contrib/securityonion-elsa-web.conf
@@ -8,7 +8,7 @@
     },
   	"peers": {
 		"127.0.0.1": {
-			"url": "https://127.0.0.1:3154/",
+			"url": "http://127.0.0.1:3154/",
 			"username": "elsa",
 			"apikey": "1"
 		}
