--- a/contrib/securityonion_apache_site.conf
+++ b/contrib/securityonion_apache_site.conf
@@ -20,9 +20,9 @@ NameVirtualHost localhost:3154
 		PerlResponseHandler Plack::Handler::Apache2
 		PerlSetVar psgi_app /opt/elsa/web/lib/Web.psgi
 	</Location>
-	SSLEngine on
-	SSLCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
-	SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+	#SSLEngine on
+	#SSLCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
+	#SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
 	# Cleanup proxied HTTP auth
 	RewriteEngine on
 	RewriteCond %{HTTP:Authorization} ^(.*)
