Add bro's modbus and dnp3 logs to elsa.

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -57,6 +57,8 @@ source s_bro_kerberos { file("/nsm/bro/logs/current/kerberos.log" flags(no-parse
 source s_bro_rdp { file("/nsm/bro/logs/current/rdp.log" flags(no-parse) program_override("bro_rdp")); };
 source s_bro_pe { file("/nsm/bro/logs/current/pe.log" flags(no-parse) program_override("bro_pe")); };
 source s_bro_sip { file("/nsm/bro/logs/current/sip.log" flags(no-parse) program_override("bro_sip")); };
+source s_bro_modbus { file("/nsm/bro/logs/current/modbus.log" flags(no-parse) program_override("bro_modbus")); };
+source s_bro_dnp3 { file("/nsm/bro/logs/current/dnp3.log" flags(no-parse) program_override("bro_dnp3")); };
 
 destination d_elsa { program("sh /opt/elsa/contrib/securityonion/contrib/securityonion-elsa-syslog-ng.sh" template(t_db_parsed)); };
 
@@ -86,6 +88,8 @@ log {
   	source(s_bro_rdp); 
   	source(s_bro_pe); 
   	source(s_bro_sip); 
+  	source(s_bro_modbus); 
+  	source(s_bro_dnp3); 
 	source(s_ossec);
 	source(s_network);
 	source(s_syslog);
