Issue 1036: securityonion-elsa-extras: add pattern for Bro rfb.log

--- a/contrib/securityonion-syslog-ng.conf
+++ b/contrib/securityonion-syslog-ng.conf
@@ -59,6 +59,7 @@ source s_bro_pe { file("/nsm/bro/logs/current/pe.log" flags(no-parse) program_ov
 source s_bro_sip { file("/nsm/bro/logs/current/sip.log" flags(no-parse) program_override("bro_sip")); };
 source s_bro_modbus { file("/nsm/bro/logs/current/modbus.log" flags(no-parse) program_override("bro_modbus")); };
 source s_bro_dnp3 { file("/nsm/bro/logs/current/dnp3.log" flags(no-parse) program_override("bro_dnp3")); };
+source s_bro_rfb { file("/nsm/bro/logs/current/rfb.log" flags(no-parse) program_override("bro_rfb")); };
 
 destination d_elsa { program("sh /opt/elsa/contrib/securityonion/contrib/securityonion-elsa-syslog-ng.sh" template(t_db_parsed)); };
 
@@ -90,6 +91,7 @@ log {
   	source(s_bro_sip); 
   	source(s_bro_modbus); 
   	source(s_bro_dnp3); 
+  	source(s_bro_rfb); 
 	source(s_ossec);
 	source(s_network);
 	source(s_syslog);
